--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <body>
       <ul>
         <li a="salomemagusi">https://github.com/salomemagusi<li/>
-        <li> I am awesome</li>
-
+          <h1>About me</h1>
+          <p>I am a student and was also a student even before joining Moringa school.
+             i am looking forward to learning more and knowing more from my friends and TM here in Moringa.
+             So far I have learnt knew things and looking forward even to learn extra new things during the curse process.As for my background in computing,I can say that
+             i know abit of its oprations as compared to what I have seen is taught in Moringa.</p>
+          <p>I always believe I can and always focus in things I do and so with that and also my Passion in computing I saw it more than possible to start a programming class.
+          </p>    
     </body>
   </html>
