--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
  <!DOCTYPE html>
   <html>
     <head>
-      <meta charset="utf-8">
-      <title>Salome Magusi</title>
-    </head>
+      <link href="css/style.css" rel="stylesheet" type="text/css">
+        <meta charset="utf-8">
+          <title>Salome Magusi</title>
+   </head>
     <body>
-      <ul>
-        <li a="salomemagusi">https://github.com/salomemagusi<li/>
-          <h1>About me</h1>
+        <h1>About me</h1>
           <p>I am a student and was also a student even before joining Moringa school.
              i am looking forward to learning more and knowing more from my friends and TM here in Moringa.
              So far I have learnt knew things and looking forward even to learn extra new things during the curse process.As for my background in computing,I can say that
              i know abit of its oprations as compared to what I have seen is taught in Moringa.</p>
           <p>I always believe I can and always focus in things I do and so with that and also my Passion in computing I saw it more than possible to start a programming class.
-          </p>    
+          </p>
+           <p><a href="https://github.com/salomemagusi">click here</a>to view other projects.</p>
+           <p><img src="/home/salome/sally/IMG-20170303-WA0001.jpg" alt="a photo of me"> In photos I appear young but in real person I am younger</p>
     </body>
   </html>
