--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
   <html>
     <head>
-      <link href="css/style.css" rel="stylesheet" type="text/css">
+      <link href="css/css/bootstrap.css" rel="stylesheet" type="text/css">
         <meta charset="utf-8">
           <title>Salome Magusi</title>
    </head>
@@ -14,6 +14,15 @@
           <p>I always believe I can and always focus in things I do and so with that and also my Passion in computing I saw it more than possible to start a programming class.
           </p>
            <p><a href="https://github.com/salomemagusi">click here</a>to view other projects.</p>
-           <p><img src="/home/salome/sally/IMG-20170303-WA0001.jpg" alt="a photo of me"> In photos I appear young but in real person I am younger</p>
+           <p><img src="/home/salome/sally/IMG-20170303-WA0001.jpg" alt="a photo of me"></p>
+           <p>I have gone through many learning institutions and never found the mode or kind of learning system taking place in Moringa</p>
+             <ul>
+               <li>peer programming</li>
+               <li>standups</li>
+               <li>student orinted learning</li>
+               <li>More practical than theories</li>
+               <li>Improving on the leaner,s communication skills</li>
+               <li>teaching how to behave and carry out oneself in the job market</li>
+             </ul>
     </body>
   </html>
