--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
         <meta charset="utf-8">
           <title>Salome Magusi</title>
    </head>
+   <div class="container">
     <body>
+     <div class="container">
+        <div class="jumbotron">
+          <div class="well">
+            <div class="panel panel-info">
+              <div class="row>"
+                <div class="col-md-4">
         <h1>About me</h1>
           <p>I am a student and was also a student even before joining Moringa school.
              i am looking forward to learning more and knowing more from my friends and TM here in Moringa.
@@ -13,16 +20,35 @@
              i know abit of its oprations as compared to what I have seen is taught in Moringa.</p>
           <p>I always believe I can and always focus in things I do and so with that and also my Passion in computing I saw it more than possible to start a programming class.
           </p>
+      </div>
+        </div>
+          </div>
+            </div>
+              <div/>
+                </div>
            <p><a href="https://github.com/salomemagusi">click here</a>to view other projects.</p>
-           <p><img src="/home/salome/sally/IMG-20170303-WA0001.jpg" alt="a photo of me"></p>
+           <div class="container">
+             <div class="jumbotron">
+               <div class="well">
+                 <div class="panel panel-info">
+                   <div class="row">
+                     <div class="col-md-12">
+           <p><img src="/home/salome/Desktop/Portfolio/IMG-20170303-WA0001.jpg "width 200px" "height 300px""alt="a photo of me"></p>
            <p>I have gone through many learning institutions and never found the mode or kind of learning system taking place in Moringa</p>
-             <ul>
-               <li>peer programming</li>
+              <ul>
+               <li class="bg-primary">peer programming</li>
                <li>standups</li>
                <li>student orinted learning</li>
                <li>More practical than theories</li>
                <li>Improving on the leaner,s communication skills</li>
                <li>teaching how to behave and carry out oneself in the job market</li>
              </ul>
-    </body>
-  </html>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  </body>
+</div>
+    </html>
