--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
   <html>
     <head>
       <link href="css/css/bootstrap.css" rel="stylesheet" type="text/css">
+      <link rel="stylesheet" href="css/styles.css">
         <meta charset="utf-8">
           <title>Salome Magusi</title>
    </head>
    <div class="container">
-    <body>
+    <body background="portfolio/download.jpg">
      <div class="container">
         <div class="jumbotron">
           <div class="well">
@@ -32,8 +33,8 @@
                <div class="well">
                  <div class="panel panel-info">
                    <div class="row">
-                     <div class="col-md-12">
-           <p><img src="/home/salome/Desktop/Portfolio/IMG-20170303-WA0001.jpg "width 200px" "height 300px""alt="a photo of me"></p>
+                     <div class="col-md-4">
+           <p><img src="/home/salome/Desktop/Portfolio/IMG-20170303-WA0001.jpg"alt="a photo of me" width="55%" height="55%"></p>
            <p>I have gone through many learning institutions and never found the mode or kind of learning system taking place in Moringa</p>
               <ul>
                <li class="bg-primary">peer programming</li>
