--- a/index.html
+++ b/index.html
@@ -6,14 +6,10 @@
         <meta charset="utf-8">
           <title>Salome Magusi</title>
    </head>
-   <div class="container">
     <body background="portfolio/download.jpg">
      <div class="container">
+       <div class="row">
         <div class="jumbotron">
-          <div class="well">
-            <div class="panel panel-info">
-              <div class="row>"
-                <div class="col-md-4">
         <h1>About me</h1>
           <p>I am a student and was also a student even before joining Moringa school.
              i am looking forward to learning more and knowing more from my friends and TM here in Moringa.
@@ -22,19 +18,15 @@
           <p>I always believe I can and always focus in things I do and so with that and also my Passion in computing I saw it more than possible to start a programming class.
           </p>
       </div>
-        </div>
-          </div>
-            </div>
-              <div/>
-                </div>
-           <p><a href="https://github.com/salomemagusi">click here</a>to view other projects.</p>
-           <div class="container">
+    </div>
+      </div>
+    </div>
+           <p id="pg"><a href="https://github.com/salomemagusi">click here</a>to view other projects.</p>
+
              <div class="jumbotron">
-               <div class="well">
-                 <div class="panel panel-info">
                    <div class="row">
-                     <div class="col-md-4">
-           <p><img src="/home/salome/Desktop/Portfolio/IMG-20170303-WA0001.jpg"alt="a photo of me" width="55%" height="55%"></p>
+                     <div class="col-md-6">
+
            <p>I have gone through many learning institutions and never found the mode or kind of learning system taking place in Moringa</p>
               <ul>
                <li class="bg-primary">peer programming</li>
@@ -45,11 +37,11 @@
                <li>teaching how to behave and carry out oneself in the job market</li>
              </ul>
           </div>
+            <div class="col-md-6">
+           <p><img src="/home/salome/Desktop/Portfolio/IMG-20170303-WA0001.jpg"alt="a photo of me" width="55%" height="55%"></p>
+          </div>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
-  </body>
-</div>
+       </div>
+       </div>
+      </body>
     </html>
